# myccskills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  ai-config.ps1  ai-config.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: python-cli.yml  windows-native.yml
agy/: settings.json
ai_config/: __main__.py  backup.py  cli.py  console.py  frontmatter.py  fsops.py  links.py  locking.py  mirrors.py  paths.py  plugins.py  safety.py  skills.py  staging.py
ai_config/tools/: agy.py  claude.py  codex.py
claude/: CLAUDE.md  mcp.json  settings.json  statusline.sh
claude/agents/: agy-rescue.md  gemini-rescue.md  python-code-commenter.md
claude/commands/: agy-rescue.md  ai-config-sync.md  commit.md  sbom-report.md
claude/shared/: README.md
claude/shared/both/888box-asset-management/: SKILL.md
claude/shared/both/agent-browser/: SKILL.md
claude/shared/both/ai-config-sync/: SKILL.md
claude/shared/both/ci-check/: SKILL.md
claude/shared/both/commit/: SKILL.md
claude/shared/both/design-md/: SKILL.md
claude/shared/both/react-bits/: SKILL.md
codex/: config.toml
docs/: ai-config-packaging-plan.md  python-cli-migration.md  sh-ps1-behavior-notes.md  tool-data-repo-split-plan.md
legacy/: ai-config.ps1  ai-config.sh
legacy/scripts/: codex.sh
scripts/: agy.sh  claude.sh  codex.sh
tests/: conftest.py  test_apply_projection.py  test_commands.py  test_packaging_and_sync.py  test_python_migration.py  test_repository_invariants.py  test_sync_logic.py  test_windows_sync.py  test_wrappers.py
(+5 files in other folders)
