[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-config"
version = "1.0.0"
description = "Cross-AI tool configuration manager (Claude Code / Codex / Antigravity)"
requires-python = ">=3.11"

[project.scripts]
ai-config = "ai_config.cli:console_main"

[tool.setuptools]
packages = ["ai_config", "ai_config.tools"]
